# master-classes-empty

./: .gitignore  EXERCISES.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
material/M2_Unit_10_Survival_Analysis_and_Cox_Regression_Exercises_and_Briefing/: M2_Unit_10_Survival_Analysis_and_Cox_Regression_Case_Studies.md
material/M2_Unit_3_Sampling_Theory_Exercises_and_Briefing/: M2_Unit_3_Sampling_Theory_Case_Studies.md
material/M2_Unit_4_Statistical_Distribution_Theory_Exercises_and_Briefing/: M2_Unit_4_Statistical_Distribution_Theory_Math_Briefing.md
material/M2_Unit_5_Statistical_Inference_Parametric_Exercises_and_Briefing/: M2_Unit_5_Statistical_Inference_Parametric_Case_Studies.md
material/M2_Unit_6_Statistical_Inference_Non_Parametric_Exercises_and_Briefing/: M2_Unit_6_Statistical_Inference_Non_Parametric_Fixation.md  M2_Unit_6_Statistical_Inference_Non_Parametric_Math_Briefing.md
material/M2_Unit_7_Linear_Regression_Part_2_Exercises_and_Briefing/: M2_Unit_7_Linear_Regression_Part_2_Case_Studies.md  M2_Unit_7_Linear_Regression_Part_2_Math_Briefing.md
material/M2_Unit_8_Binary_Logistic_Regression_Exercises_and_Briefing/: M2_Unit_8_Binary_Logistic_Regression_Math_Briefing.md
material/M2_Unit_9_Poisson_Regression_Exercises_and_Briefing/: M2_Unit_9_Poisson_Regression_Fixation.md  M2_Unit_9_Poisson_Regression_Math_Briefing.md
notebooks/: 01_exemplo.ipynb  class_2.ipynb  class_4.ipynb  class_5.ipynb  class_6.ipynb  first_notebook_example.ipynb
notebooks/classes/: class_2.ipynb  (+4 more)
scripts/: example_cli.py
tests/: test_utils.py
(+133 files in other folders)
