[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unilab"
version = "0.1.0"
description = "Local lib for master projects using Jupyter (Anaconda + pip)"
authors = [{name="Nilton Constantino"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Se precisar de alguma lib puramente Python não disponível no conda, coloque aqui
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict = false
exclude = ["notebooks"]
